--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .bg-img-section {
-	background: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, .55)), url("../img/BG.jpg") no-repeat center center fixed;
+	background: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, .55)), url("http://i.imgur.com/RxWqWd0.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -104,6 +104,7 @@ body {
 	background-color: #55acee;
 	color: #FFF;
 	border: none;
+	margin-bottom: 6px;
 }
 
 #twitter:hover {
@@ -136,7 +137,7 @@ body {
 
 @media (max-height: 350px) {
 	.fullHeight {
-		padding-top: 50px;
+		padding-top: 1px;
 	}
 }
 
@@ -159,7 +160,13 @@ body {
 @media (max-width: 768px) {
 	.skillHead {
 		text-align: left;
-		padding-left: 25%;
+		padding-left: 5%;
+	}
+		.intro p{
+		font-size: 1em;
+	}
+		.intro h1 {
+		font-size: 2em;
 	}
 }
 
