--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,20 @@ body {
 	-o-background-size: cover;
 	background-size: cover;
 	margin: 0;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .no-img-section {
+	min-height: 100vh;
 	background-color:#333;
-	height: 100vh;
 }
+
+.section {
+	padding-top: 12%;
+	padding-bottom: 10%;
+}
+
+/*navbar*/
 
 @media (min-width:768px) {
 	.navFix > li {
@@ -77,18 +84,6 @@ body {
 	background-color: transparent;
 }
 
-.clearfix {
-	overflow: auto;
-}
-
-.section {
-	padding-top: 5%;
-	padding-bottom: 10%;
-}
-
-.sectionHead {}
-
-
 /*Set social media buttons to branded colors, darken by 10% on hover*/
 
 #linkedIn {
@@ -130,21 +125,11 @@ body {
 	padding-top: 20px;
 }
 
+/*media queries*/
+
 @media (max-height: 450px) {
-	.fullHeight {
-		padding-top: 70px;
-	}
-}
-
-@media (max-height: 350px) {
-	.fullHeight {
-		padding-top: 1px;
-	}
-}
-
-@media (min-height: 700px) {
-	.fullHeight {
-		padding-top: 200px;
+	.section {
+		padding-top: 35px;
 	}
 }
 
@@ -169,8 +154,4 @@ body {
 		.intro h1 {
 		font-size: 2em;
 	}
-}
-
-#contact {
-	height: 93vh;
 }
