--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,15 @@ body {
 	font-size: 4em;
 }
 
+.inlineLink {
+	color: lightgreen;
+}
+
+.inlineLink:hover {
+	color: green;
+	text-decoration: underline;
+}
+
 .bg-img-section {
 	background: linear-gradient(rgba(0, 0, 0, .75), rgba(0, 0, 0, .55)), url("http://i.imgur.com/RxWqWd0.jpg") no-repeat center center fixed;
 	-webkit-background-size: cover;
@@ -115,6 +124,16 @@ body {
 
 #github:hover {
 	background-color: #4d4d4d;
+}
+
+#freeCodeCamp {
+	background-color: #006400;
+	color: #fff;
+	border: none;
+}
+
+#freeCodeCamp:hover {
+	background-color: #003300;
 }
 
 #footer {
